--- a/skin/frontend/pc/default/scss/_one_step_checkout.scss
+++ b/skin/frontend/pc/default/scss/_one_step_checkout.scss
@@ -205,7 +205,7 @@ div.c { clear:both; width:100%; height:0px}
 .data-table td.last,
 .data-table th.last { border-right:0; }
 .data-table tr.last th { border-bottom:0 !important;border-right:none;}
-.data-table tr.last td { border-bottom:0 !important;border-right:none;text-align: right; }
+.data-table tr.last td { border-bottom:0 !important;border-right:none;}
 .data-table th { padding:3px 8px; font-weight:bold; }
 
 
